# BitTrainer

./: .gitignore  pyproject.toml
benchmarks/: ab_phase2.py
bittrainer/: __init__.py  autobatch.py  backbone_init.py  backbone_trainer.py  cache_builders.py  calibration.py  checkpoint.py  class_balance.py  cloud_export.py  collate.py  dataset.py  dual_branch_model.py  dual_branch_trainer.py  dual_crop_dataset.py  dynamic_class_weights.py  ema.py  embedding_cache.py  face_crop.py  finalize.py  gpu_augment.py  group_dataset.py  group_trainer.py  group_validation.py  head_only_trainer.py  head_probe.py  image_cache.py  image_utils.py  losses.py  mixing.py  model.py  model_soup.py  multihead_losses.py  multihead_model.py  multihead_ordinal.py  multihead_trainer.py  oft.py  oft_trainer.py  priors.py  probes.py  progress.py  (+13 more)
bittrainer/generic/: __init__.py  evaluation.py  generic_trainer.py  optimizer.py  task.py
bittrainer/tests/: test_auto_label_softness.py  test_auto_oversample.py  test_auto_promote.py  test_auto_promote_finalize.py  test_autobatch.py  test_backbone_generic.py  test_backbone_hash.py  test_backbone_heads_task.py  test_backbone_init.py  test_backbone_init_spec.py  test_backbone_resolution.py  test_backbone_sampling.py  test_backbone_soft_negatives.py  test_backbone_trainer.py  test_binary_task.py  test_calibration_order.py  test_checkpoint_selection.py  test_class_balance.py  test_cut_point_clamp.py  test_dcw_integration.py  test_dual_branch_task.py  test_dynamic_class_weights.py  test_embedding_cache.py  test_epoch_message_payload.py  test_generic_trainer.py  test_gpu_augment.py  test_group_dataset_cap.py  test_group_loss_extraction.py  test_oft.py  (+33 more)
tests/: test_backbone_trainer_parity.py  test_multihead_losses_metrics.py  test_multihead_ordinal.py
(+8 files in other folders)
