[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BitTrainer"
version = "0.1.0"
description = "Binary concept classifier training — ConvNeXt V2 with Prodigy_adv, aspect ratio bucketing, and checkpoint management."
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "timm>=1.0",
    "adv-optm>=2.4.dev4",
    "scikit-learn>=1.3",
    "Pillow>=10.0",
    "numpy>=1.24",
    "xxhash>=3.4",
    "tqdm>=4.65",
]

[project.optional-dependencies]
heif = ["pillow-heif"]
avif = ["pillow-avif-plugin"]
all = ["pillow-heif", "pillow-avif-plugin"]

[tool.setuptools.packages.find]
where = ["."]
include = ["bittrainer*"]
