[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BitTrainer"
version = "0.1.0"
description = "Binary concept classifier training — ConvNeXt V2 with Prodigy_adv, aspect ratio bucketing, and checkpoint management."
requires-python = ">=3.11"
dependencies = [
    "torch>=2.10",
    "torchvision>=0.25",
    "timm>=1.0",
    "adv-optm>=2.5.2",
    "scikit-learn>=1.3",
    "Pillow>=10.0",
    "numpy>=1.24",
    "safetensors>=0.4",
    "xxhash>=3.4",
    "tqdm>=4.65",
]

[project.optional-dependencies]
heif = ["pillow-heif"]
avif = ["pillow-avif-plugin"]
# torch.compile's CUDA inductor backend needs triton; on Windows that's the
# triton-windows wheel. Trainers fall back to eager when it's absent.
compile = ["triton-windows; sys_platform == 'win32'"]
all = ["pillow-heif", "pillow-avif-plugin"]

[tool.setuptools.packages.find]
where = ["."]
include = ["bittrainer*"]
